--- a/freertos_apps/stm32MakefileTest/Stm32_Makefile_test.ioc
+++ b/freertos_apps/stm32MakefileTest/Stm32_Makefile_test.ioc
@@ -42,27 +42,31 @@ Mcu.IP3=LWIP
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=USART1
-Mcu.IPNb=8
+Mcu.IP7=TIM9
+Mcu.IP8=USART1
+Mcu.IPNb=9
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PF9
-Mcu.Pin1=PF10
-Mcu.Pin10=PB13
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin14=VP_LWIP_VS_Enabled
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin2=PC1
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA7
-Mcu.Pin6=PC4
-Mcu.Pin7=PC5
-Mcu.Pin8=PB11
-Mcu.Pin9=PB12
-Mcu.PinsNb=16
+Mcu.Pin0=PE4
+Mcu.Pin1=PE5
+Mcu.Pin10=PB11
+Mcu.Pin11=PB12
+Mcu.Pin12=PB13
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin16=VP_LWIP_VS_Enabled
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin2=PF9
+Mcu.Pin3=PF10
+Mcu.Pin4=PC1
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA7
+Mcu.Pin8=PC4
+Mcu.Pin9=PC5
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -84,6 +88,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
@@ -107,6 +112,10 @@ PC4.Mode=RMII
 PC4.Signal=ETH_RXD0
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PE4.Locked=true
+PE4.Signal=GPIO_Output
+PE5.Locked=true
+PE5.Signal=S_TIM9_CH1
 PF10.Locked=true
 PF10.Signal=GPIO_Output
 PF9.Locked=true
@@ -139,7 +148,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_TIM9_Init-TIM9-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -172,6 +181,13 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.S_TIM9_CH1.0=TIM9_CH1,PWM Generation1 CH1
+SH.S_TIM9_CH1.ConfNb=1
+TIM9.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM9.IPParameters=Channel-PWM Generation1 CH1,Period,Prescaler,Pulse-PWM Generation1 CH1
+TIM9.Period=499
+TIM9.Prescaler=83
+TIM9.Pulse-PWM\ Generation1\ CH1=500
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
@@ -180,4 +196,6 @@ VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM9_VS_ClockSourceINT.Mode=Internal
+VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
 board=custom
