--- a/freertos_apps/stm32MakefileTest/Stm32_Makefile_test.ioc
+++ b/freertos_apps/stm32MakefileTest/Stm32_Makefile_test.ioc
@@ -29,7 +29,7 @@ FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,24,1500,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=50000
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 LWIP.IPParameters=LWIP_DNS
 LWIP.LWIP_DNS=1
@@ -42,31 +42,37 @@ Mcu.IP3=LWIP
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=TIM9
-Mcu.IP8=USART1
-Mcu.IPNb=9
+Mcu.IP7=TIM6
+Mcu.IP8=TIM9
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PE4
-Mcu.Pin1=PE5
-Mcu.Pin10=PB11
-Mcu.Pin11=PB12
-Mcu.Pin12=PB13
-Mcu.Pin13=PA9
-Mcu.Pin14=PA10
-Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin16=VP_LWIP_VS_Enabled
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin2=PF9
-Mcu.Pin3=PF10
-Mcu.Pin4=PC1
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA7
-Mcu.Pin8=PC4
-Mcu.Pin9=PC5
-Mcu.PinsNb=19
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB11
+Mcu.Pin14=PB12
+Mcu.Pin15=PB13
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PE1
+Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin2=PE4
+Mcu.Pin20=VP_LWIP_VS_Enabled
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin3=PE5
+Mcu.Pin4=PE6
+Mcu.Pin5=PF9
+Mcu.Pin6=PF10
+Mcu.Pin7=PC1
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -77,6 +83,8 @@ NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA2_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.EXTI3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -88,6 +96,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true
+NVIC.TIM6_DAC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Mode=RMII
@@ -112,10 +121,20 @@ PC4.Mode=RMII
 PC4.Signal=ETH_RXD0
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PE1.Locked=true
+PE1.Signal=GPIO_Output
+PE2.Locked=true
+PE2.Signal=GPIO_Output
+PE3.Locked=true
+PE3.Signal=GPXTI3
 PE4.Locked=true
-PE4.Signal=GPIO_Output
+PE4.Signal=GPXTI4
 PE5.Locked=true
 PE5.Signal=S_TIM9_CH1
+PE6.GPIOParameters=PinState
+PE6.Locked=true
+PE6.PinState=GPIO_PIN_SET
+PE6.Signal=GPIO_Output
 PF10.Locked=true
 PF10.Signal=GPIO_Output
 PF9.Locked=true
@@ -148,7 +167,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_TIM9_Init-TIM9-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_TIM9_Init-TIM9-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -181,13 +200,21 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SH.S_TIM9_CH1.0=TIM9_CH1,PWM Generation1 CH1
 SH.S_TIM9_CH1.ConfNb=1
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM6.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM6.Period=5000
+TIM6.Prescaler=8399
 TIM9.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM9.IPParameters=Channel-PWM Generation1 CH1,Period,Prescaler,Pulse-PWM Generation1 CH1
 TIM9.Period=499
 TIM9.Prescaler=83
-TIM9.Pulse-PWM\ Generation1\ CH1=500
+TIM9.Pulse-PWM\ Generation1\ CH1=250
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
@@ -196,6 +223,8 @@ VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_TIM9_VS_ClockSourceINT.Mode=Internal
 VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
 board=custom
