--- a/freertos_apps/stm32MakefileTest/Stm32_Makefile_test.ioc
+++ b/freertos_apps/stm32MakefileTest/Stm32_Makefile_test.ioc
@@ -26,8 +26,9 @@ ETH.IPParameters=MediaInterface
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xTaskGetHandle=1
-FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE,configUSE_POSIX_ERRNO,configUSE_STATS_FORMATTING_FUNCTIONS,INCLUDE_xTaskGetHandle
+FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE,configUSE_POSIX_ERRNO,configUSE_STATS_FORMATTING_FUNCTIONS,INCLUDE_xTaskGetHandle,configENABLE_FPU
 FREERTOS.Tasks01=defaultTask,24,1500,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configENABLE_FPU=1
 FREERTOS.configTOTAL_HEAP_SIZE=50000
 FREERTOS.configUSE_POSIX_ERRNO=1
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
@@ -40,6 +41,7 @@ LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=ETH
+Mcu.IP10=USART6
 Mcu.IP2=FREERTOS
 Mcu.IP3=LWIP
 Mcu.IP4=NVIC
@@ -48,7 +50,7 @@ Mcu.IP6=SYS
 Mcu.IP7=TIM6
 Mcu.IP8=TIM9
 Mcu.IP9=USART1
-Mcu.IPNb=10
+Mcu.IPNb=11
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -60,17 +62,19 @@ Mcu.Pin13=PA2
 Mcu.Pin14=PA7
 Mcu.Pin15=PC4
 Mcu.Pin16=PC5
-Mcu.Pin17=PB11
-Mcu.Pin18=PB12
-Mcu.Pin19=PB13
+Mcu.Pin17=PC6
+Mcu.Pin18=PC7
+Mcu.Pin19=PA9
 Mcu.Pin2=PE4
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin23=VP_LWIP_VS_Enabled
-Mcu.Pin24=VP_SYS_VS_tim1
-Mcu.Pin25=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin20=PA10
+Mcu.Pin21=PG11
+Mcu.Pin22=PG13
+Mcu.Pin23=PG14
+Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin25=VP_LWIP_VS_Enabled
+Mcu.Pin26=VP_SYS_VS_tim1
+Mcu.Pin27=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin3=PE5
 Mcu.Pin4=PE6
 Mcu.Pin5=PF0
@@ -78,7 +82,7 @@ Mcu.Pin6=PF1
 Mcu.Pin7=PF2
 Mcu.Pin8=PF3
 Mcu.Pin9=PF9
-Mcu.PinsNb=27
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -121,22 +125,29 @@ PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB11.Mode=RMII
-PB11.Signal=ETH_TX_EN
-PB12.Mode=RMII
-PB12.Signal=ETH_TXD0
-PB13.Mode=RMII
-PB13.Signal=ETH_TXD1
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
 PC4.Mode=RMII
 PC4.Signal=ETH_RXD0
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PC6.Mode=Asynchronous
+PC6.Signal=USART6_TX
+PC7.Mode=Asynchronous
+PC7.Signal=USART6_RX
+PE2.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PE2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE2.GPIO_PuPd=GPIO_PULLUP
 PE2.Locked=true
 PE2.Signal=GPXTI2
+PE3.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PE3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE3.GPIO_PuPd=GPIO_PULLUP
 PE3.Locked=true
 PE3.Signal=GPXTI3
+PE4.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PE4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE4.GPIO_PuPd=GPIO_PULLUP
 PE4.Locked=true
 PE4.Signal=GPXTI4
 PE5.Locked=true
@@ -157,6 +168,15 @@ PF3.Locked=true
 PF3.Signal=GPIO_Output
 PF9.Locked=true
 PF9.Signal=GPIO_Output
+PG11.Locked=true
+PG11.Mode=RMII
+PG11.Signal=ETH_TX_EN
+PG13.Locked=true
+PG13.Mode=RMII
+PG13.Signal=ETH_TXD0
+PG14.Locked=true
+PG14.Mode=RMII
+PG14.Signal=ETH_TXD1
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -185,7 +205,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_TIM9_Init-TIM9-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_TIM9_Init-TIM9-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true,8-MX_USART6_UART_Init-USART6-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -241,6 +261,8 @@ TIM9.Prescaler=83
 TIM9.Pulse-PWM\ Generation1\ CH1=250
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+USART6.IPParameters=VirtualMode
+USART6.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_LWIP_VS_Enabled.Mode=Enabled
