--- a/freertos_apps/stm32MakefileTest/Stm32_Makefile_test.ioc
+++ b/freertos_apps/stm32MakefileTest/Stm32_Makefile_test.ioc
@@ -1,16 +1,18 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=USART1_RX
 Dma.Request1=USART1_TX
-Dma.RequestsNb=2
+Dma.Request2=USART3_RX
+Dma.Request3=USART3_TX
+Dma.RequestsNb=4
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_RX.0.Instance=DMA2_Stream2
 Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.0.Mode=DMA_NORMAL
+Dma.USART1_RX.0.Mode=DMA_CIRCULAR
 Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.USART1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -20,15 +22,36 @@ Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
 Dma.USART1_TX.1.Mode=DMA_NORMAL
 Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.1.Priority=DMA_PRIORITY_MEDIUM
 Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_RX.2.Instance=DMA1_Stream1
+Dma.USART3_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.2.Mode=DMA_NORMAL
+Dma.USART3_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.2.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.USART3_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART3_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_TX.3.Instance=DMA1_Stream3
+Dma.USART3_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.3.Mode=DMA_NORMAL
+Dma.USART3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.3.Priority=DMA_PRIORITY_MEDIUM
+Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xTaskGetHandle=1
-FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE,configUSE_POSIX_ERRNO,configUSE_STATS_FORMATTING_FUNCTIONS,INCLUDE_xTaskGetHandle,configENABLE_FPU
+FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE,configUSE_POSIX_ERRNO,configUSE_STATS_FORMATTING_FUNCTIONS,INCLUDE_xTaskGetHandle,configENABLE_FPU,configGENERATE_RUN_TIME_STATS
 FREERTOS.Tasks01=defaultTask,24,1500,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
+FREERTOS.configGENERATE_RUN_TIME_STATS=1
 FREERTOS.configTOTAL_HEAP_SIZE=50000
 FREERTOS.configUSE_POSIX_ERRNO=1
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
@@ -41,7 +64,8 @@ LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=ETH
-Mcu.IP10=USART6
+Mcu.IP10=USART3
+Mcu.IP11=USART6
 Mcu.IP2=FREERTOS
 Mcu.IP3=LWIP
 Mcu.IP4=NVIC
@@ -50,7 +74,7 @@ Mcu.IP6=SYS
 Mcu.IP7=TIM6
 Mcu.IP8=TIM9
 Mcu.IP9=USART1
-Mcu.IPNb=11
+Mcu.IPNb=12
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -62,33 +86,37 @@ Mcu.Pin13=PA2
 Mcu.Pin14=PA7
 Mcu.Pin15=PC4
 Mcu.Pin16=PC5
-Mcu.Pin17=PC6
-Mcu.Pin18=PC7
-Mcu.Pin19=PA9
+Mcu.Pin17=PB10
+Mcu.Pin18=PB11
+Mcu.Pin19=PC6
 Mcu.Pin2=PE4
-Mcu.Pin20=PA10
-Mcu.Pin21=PG11
-Mcu.Pin22=PG13
-Mcu.Pin23=PG14
-Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin25=VP_LWIP_VS_Enabled
-Mcu.Pin26=VP_SYS_VS_tim1
-Mcu.Pin27=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin20=PC7
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PG11
+Mcu.Pin24=PG13
+Mcu.Pin25=PG14
+Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin27=VP_LWIP_VS_Enabled
+Mcu.Pin28=VP_SYS_VS_tim1
+Mcu.Pin29=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PE5
+Mcu.Pin30=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin4=PE6
 Mcu.Pin5=PF0
 Mcu.Pin6=PF1
 Mcu.Pin7=PF2
 Mcu.Pin8=PF3
 Mcu.Pin9=PF9
-Mcu.PinsNb=29
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
 MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA2_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -125,6 +153,10 @@ PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB10.Mode=Asynchronous
+PB10.Signal=USART3_TX
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
 PC4.Mode=RMII
@@ -205,7 +237,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_TIM9_Init-TIM9-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true,8-MX_USART6_UART_Init-USART6-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_TIM9_Init-TIM9-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true,8-MX_USART6_UART_Init-USART6-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -261,6 +293,8 @@ TIM9.Prescaler=83
 TIM9.Pulse-PWM\ Generation1\ CH1=250
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
 USART6.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
