--- a/freertos_apps/stm32MakefileTest/Stm32_Makefile_test.ioc
+++ b/freertos_apps/stm32MakefileTest/Stm32_Makefile_test.ioc
@@ -64,51 +64,62 @@ LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=ETH
-Mcu.IP10=USART3
-Mcu.IP11=USART6
+Mcu.IP10=TIM5
+Mcu.IP11=TIM6
+Mcu.IP12=TIM9
+Mcu.IP13=USART1
+Mcu.IP14=USART3
+Mcu.IP15=USART6
 Mcu.IP2=FREERTOS
 Mcu.IP3=LWIP
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=TIM6
-Mcu.IP8=TIM9
-Mcu.IP9=USART1
-Mcu.IPNb=12
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=16
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
 Mcu.Pin10=PF10
 Mcu.Pin11=PC1
-Mcu.Pin12=PA1
-Mcu.Pin13=PA2
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PC5
-Mcu.Pin17=PB10
-Mcu.Pin18=PB11
-Mcu.Pin19=PC6
+Mcu.Pin12=PA0-WKUP
+Mcu.Pin13=PA1
+Mcu.Pin14=PA2
+Mcu.Pin15=PA5
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB10
 Mcu.Pin2=PE4
-Mcu.Pin20=PC7
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PG11
-Mcu.Pin24=PG13
-Mcu.Pin25=PG14
-Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin27=VP_LWIP_VS_Enabled
-Mcu.Pin28=VP_SYS_VS_tim1
-Mcu.Pin29=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin20=PB11
+Mcu.Pin21=PC6
+Mcu.Pin22=PC7
+Mcu.Pin23=PA9
+Mcu.Pin24=PA10
+Mcu.Pin25=PG11
+Mcu.Pin26=PG13
+Mcu.Pin27=PG14
+Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin29=VP_LWIP_VS_Enabled
 Mcu.Pin3=PE5
-Mcu.Pin30=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin30=VP_SYS_VS_tim1
+Mcu.Pin31=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin33=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin34=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin4=PE6
 Mcu.Pin5=PF0
 Mcu.Pin6=PF1
 Mcu.Pin7=PF2
 Mcu.Pin8=PF3
 Mcu.Pin9=PF9
-Mcu.PinsNb=31
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -138,17 +149,22 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.Signal=S_TIM5_CH1
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
+PA5.Signal=S_TIM2_CH1_ETR
 PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
 PA9.Mode=Asynchronous
@@ -237,7 +253,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_TIM9_Init-TIM9-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true,8-MX_USART6_UART_Init-USART6-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_TIM9_Init-TIM9-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true,8-MX_USART6_UART_Init-USART6-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -280,8 +296,32 @@ SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
+SH.S_TIM5_CH1.ConfNb=1
 SH.S_TIM9_CH1.0=TIM9_CH1,PWM Generation1 CH1
 SH.S_TIM9_CH1.ConfNb=1
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Prescaler,Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,OCPolarity_1,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1
+TIM2.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM2.Period=99
+TIM2.Prescaler=83
+TIM2.Pulse-PWM\ Generation1\ CH1=50
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
+TIM3.IPParameters=Period,TIM_MasterOutputTrigger
+TIM3.Period=1023
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM4.IPParameters=AutoReloadPreload,Prescaler,Period
+TIM4.Period=9999
+TIM4.Prescaler=8399
+TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM5.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-PWM Generation1 CH1
+TIM5.Period=9999
+TIM5.Prescaler=8399
 TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM6.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM6.Period=5000
@@ -303,6 +343,16 @@ VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceITR.Mode=TriggerSource_ITR1
+VP_TIM3_VS_ClockSourceITR.Signal=TIM3_VS_ClockSourceITR
+VP_TIM3_VS_ControllerModeClock.Mode=Clock Mode
+VP_TIM3_VS_ControllerModeClock.Signal=TIM3_VS_ControllerModeClock
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_TIM9_VS_ClockSourceINT.Mode=Internal
